added some styling and fancy stuff

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
         />
         <title>Online-Spielplan</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
+        <link rel="stylesheet" href="/src/index.css" />
         <style>
             body {
                 background-image: url("/background_logo_gray.svg");
                 background-repeat: no-repeat;
                 background-position: center;
-                background-size: 100%;
+                background-size: cover;
             }
         </style>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
